// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` should render correctly 1`] = `
<tr class="item-container owner">
  <th class="icon select"><label class="container"><input id="checkbox" disabled="disabled" type="checkbox" class="checkmark-input"> <span class="checkmark"></span></label></th>
  <th class="align-left data">
    <!---->
    <div class="table-item">
      <!---->
      <p class="primary">testShortName</p>
      <!---->
    </div>
  </th>
  <th class="align-left data">
    <!---->
    <div class="table-item">
      <!---->
      <p class="">Jan 1, 1970</p>
      <!---->
    </div>
  </th>
  <th class="align-left data">
    <!---->
    <div class="table-item">
      <!---->
      <p class="">test@example.com</p>
      <!---->
    </div>
  </th>
</tr>
`;

exports[` should render correctly with item row highlighted 1`] = `
<tr class="item-container selected owner">
  <th class="icon select"><label class="container"><input id="checkbox" disabled="disabled" type="checkbox" class="checkmark-input"> <span class="checkmark"></span></label></th>
  <th class="align-left data">
    <!---->
    <div class="table-item">
      <!---->
      <p class="primary">testShortName</p>
      <!---->
    </div>
  </th>
  <th class="align-left data">
    <!---->
    <div class="table-item">
      <!---->
      <p class="">Jan 1, 1970</p>
      <!---->
    </div>
  </th>
  <th class="align-left data">
    <!---->
    <div class="table-item">
      <!---->
      <p class="">test@example.com</p>
      <!---->
    </div>
  </th>
</tr>
`;
